--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 # created by virtualenv automatically
 hvision/settings.py
-hvision/core/migrations/*
+hvision/core/migrations/*.py
 Lib
 Scripts
 pyvenv.cfg
